--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,13 +37,12 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <android.support.v7.widget.RecyclerView
-        app:layout_constraintTop_toBottomOf="@id/text_date"
         android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_margin="10dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="38dp"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_date"
+        tools:layout_editor_absoluteX="10dp" />
 
 
 </android.support.constraint.ConstraintLayout>
