--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -4,13 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp">
 
 <android.support.v7.widget.CardView
     android:layout_margin="5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:ignore="MissingConstraints">
+    tools:ignore="MissingConstraints"
+    app:cardElevation="2dp"
+    app:cardCornerRadius="4dp"
+    >
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -18,7 +23,7 @@
     <TextView
         android:id="@+id/currency_name"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:text="TextView"
         android:textColor="@color/colorWhite"
         android:gravity="center"
@@ -29,7 +34,7 @@
     <TextView
         android:id="@+id/rate"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:text="TextView"
         android:textColor="@color/colorWhite"
         android:gravity="center"
@@ -40,7 +45,7 @@
     <TextView
         android:id="@+id/cc"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:text="TextView"
         android:textColor="@color/colorWhite"
         android:gravity="center"
@@ -51,7 +56,7 @@
     <TextView
         android:id="@+id/exchange_date"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:text="TextView"
         android:textColor="@color/colorWhite"
         android:gravity="center"
