--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,41 +8,28 @@
     android:background="@color/colorAccent">
 
 
-
-    <TextView
-        android:id="@+id/text_course"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginStart="5dp"
-        android:text="@string/course_on"
-        android:textColor="@color/colorWhite"
-        android:textSize="20sp"
-        android:layout_marginTop="2dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-        android:id="@+id/text_date"
-        android:textColor="@color/colorWhite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:layout_marginStart="5dp"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:inputType="date"
-        app:layout_constraintStart_toEndOf="@+id/text_course"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <android.support.v7.widget.RecyclerView
-        android:background="@color/colorAccent"
-        android:id="@+id/main_list"
+    <FrameLayout
+        android:id="@+id/main_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_date"
-        tools:layout_editor_absoluteX="10dp" />
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="0dp">
 
+    </FrameLayout>
+
+    <Button
+        android:id="@+id/get_all_courses_btn"
+        android:layout_width="135dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/main_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/colorWhite"
+        app:layout_constraintTop_toTopOf="@+id/main_container"
+        android:background="@drawable/button_style"
+        android:elevation="@dimen/cardview_compat_inset_shadow"
+        android:text="@string/all_courses">
+
+    </Button>
 
 </android.support.constraint.ConstraintLayout>
