get data from PB

--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -24,7 +24,7 @@
         android:id="@+id/base_currency"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text="TextView"
+        android:text="@string/text_example"
         android:textColor="@color/colorWhite"
         android:gravity="center"
         app:layout_constraintEnd_toStartOf="@+id/currency"
@@ -35,7 +35,7 @@
         android:id="@+id/currency"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text="TextView"
+        android:text="@string/text_example"
         android:textColor="@color/colorWhite"
         android:gravity="center"
         app:layout_constraintEnd_toStartOf="@+id/sale_rate_nb"
@@ -46,7 +46,7 @@
         android:id="@+id/sale_rate_nb"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text="TextView"
+        android:text="@string/text_example"
         android:textColor="@color/colorWhite"
         android:gravity="center"
         app:layout_constraintEnd_toStartOf="@+id/purchase_rate_nb"
@@ -58,7 +58,7 @@
        android:id="@+id/purchase_rate_nb"
        android:layout_width="0dp"
        android:layout_height="50dp"
-       android:text="TextView"
+       android:text="@string/text_example"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/sale_rate"
@@ -70,7 +70,7 @@
         android:id="@+id/sale_rate"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text="TextView"
+        android:text="@string/text_example"
         android:textColor="@color/colorWhite"
         android:gravity="center"
         app:layout_constraintEnd_toStartOf="@id/purchase_rate"
@@ -81,7 +81,7 @@
         android:id="@+id/purchase_rate"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text="TextView"
+        android:text="@string/text_example"
         android:textColor="@color/colorWhite"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
