--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,30 +7,56 @@
     tools:context=".ui.MainActivity"
     android:background="@color/colorAccent">
 
-    <Button
-        android:id="@+id/get_all_courses_btn"
-        android:layout_width="135dp"
+
+
+    <TextView
+
+        android:id="@+id/text_selected_date"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/main_container"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/colorDark"
+        android:textSize="20sp"
+
+        />
+
+    <Button
+        android:id="@+id/get_all_courses_btn"
+        android:layout_width="wrap_content"
+        android:padding="10dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/text_selected_date"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="80dp"
         android:textColor="@color/colorWhite"
-        app:layout_constraintTop_toTopOf="@+id/main_container"
         android:background="@drawable/button_style"
         android:elevation="@dimen/cardview_compat_inset_shadow"
         android:text="@string/all_courses">
 
     </Button>
 
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/text_selected_date"
+        app:layout_constraintTop_toTopOf="parent"
+        android:selectedWeekBackgroundColor="#ff0000"
+        android:weekNumberColor="#0000ff"
+        android:layout_marginBottom="10dp"
+        android:weekSeparatorLineColor="#00ff00" />
+
     <FrameLayout
         android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
-
     </FrameLayout>
-
 
 
 </android.support.constraint.ConstraintLayout>
