--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,9 @@
         android:id="@+id/text_selected_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/get_all_courses_btn"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="40dp"
         app:layout_constraintStart_toStartOf="parent"
         android:textColor="@color/colorDark"
         android:textSize="20sp"
@@ -28,8 +28,9 @@
         android:layout_width="wrap_content"
         android:padding="10dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/text_selected_date"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="10dp"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="80dp"
         android:textColor="@color/colorWhite"
@@ -39,10 +40,12 @@
 
     </Button>
 
-    <CalendarView
+    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         android:id="@+id/calendarView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/text_selected_date"
         app:layout_constraintTop_toTopOf="parent"
         android:selectedWeekBackgroundColor="#ff0000"
@@ -56,6 +59,8 @@
         android:layout_height="match_parent"
         >
     </FrameLayout>
+
+
 
 
 </android.support.constraint.ConstraintLayout>
