--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -24,7 +24,8 @@
 
     <TextView
         android:id="@+id/currency"
-        android:layout_width="0dp"
+        android:padding="3dp"
+        android:layout_width="130dp"
         android:layout_height="50dp"
         android:text="@string/text_example"
         android:textColor="@color/colorWhite"
@@ -35,6 +36,7 @@
 
     <TextView
         android:id="@+id/sale_rate_nb"
+        android:padding="3dp"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:text="@string/text_example"
@@ -49,7 +51,8 @@
        android:id="@+id/purchase_rate_nb"
        android:layout_width="0dp"
        android:layout_height="50dp"
-       android:text="@string/text_example"
+          android:padding="3dp"
+          android:text="@string/text_example"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/sale_rate"
@@ -60,6 +63,7 @@
     <TextView
         android:id="@+id/sale_rate"
         android:layout_width="0dp"
+        android:padding="3dp"
         android:layout_height="50dp"
         android:text="@string/text_example"
         android:textColor="@color/colorWhite"
@@ -71,6 +75,7 @@
     <TextView
         android:id="@+id/purchase_rate"
         android:layout_width="0dp"
+        android:padding="3dp"
         android:layout_height="50dp"
         android:text="@string/text_example"
         android:textColor="@color/colorWhite"
