--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,29 +7,55 @@
     tools:context=".ui.MainActivity"
     android:background="@color/colorAccent">
 
+
+    <TextView
+
+        android:id="@+id/text_selected_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/colorWhite"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/get_all_courses_btn" />
+
     <Button
         android:id="@+id/get_all_courses_btn"
-        android:layout_width="135dp"
+        android:layout_width="wrap_content"
+        android:padding="10dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/main_container"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="10dp"
         app:layout_constraintStart_toStartOf="parent"
         android:textColor="@color/colorWhite"
-        app:layout_constraintTop_toTopOf="@+id/main_container"
         android:background="@drawable/button_style"
         android:elevation="@dimen/cardview_compat_inset_shadow"
-        android:text="@string/all_courses">
+        android:text="@string/get_courses_on">
 
     </Button>
+
+    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/text_selected_date"
+        app:layout_constraintTop_toTopOf="parent"
+        android:selectedWeekBackgroundColor="#ff0000"
+        android:weekNumberColor="#0000ff"
+        android:layout_marginBottom="20dp"
+        android:weekSeparatorLineColor="#00ff00" />
 
     <FrameLayout
         android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="0dp">
-
+        >
     </FrameLayout>
+
 
 
 
