--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -8,7 +8,7 @@
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp">
 
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     android:layout_margin="5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,7 +16,7 @@
     app:cardElevation="2dp"
     app:cardCornerRadius="4dp"
     >
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary">
@@ -84,9 +84,9 @@
         app:layout_constraintStart_toEndOf="@+id/sale_rate"
         app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
 
 
 </android.widget.RelativeLayout>
