--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -91,7 +91,7 @@
         android:orientation="horizontal"
         android:layout_margin="2dp"
         app:layout_constraintTop_toBottomOf="@id/purchase_rate"
-        android:visibility="visible"
+        android:visibility="gone"
         >
 
     </com.jjoe64.graphview.GraphView>
