--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -30,34 +30,21 @@
         android:text="@string/text_example"
         android:textColor="@color/colorWhite"
         android:gravity="center"
-        app:layout_constraintEnd_toStartOf="@+id/sale_rate_nb"
+        app:layout_constraintEnd_toStartOf="@+id/rate_nb"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/sale_rate_nb"
+        android:id="@+id/rate_nb"
         android:padding="3dp"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:text="@string/text_example"
         android:textColor="@color/colorWhite"
         android:gravity="center"
-        app:layout_constraintEnd_toStartOf="@+id/purchase_rate_nb"
+        app:layout_constraintEnd_toStartOf="@+id/sale_rate"
         app:layout_constraintStart_toEndOf="@+id/currency"
         app:layout_constraintTop_toTopOf="parent" />
-
-
-      <TextView
-       android:id="@+id/purchase_rate_nb"
-       android:layout_width="0dp"
-       android:layout_height="50dp"
-          android:padding="3dp"
-          android:text="@string/text_example"
-       android:textColor="@color/colorWhite"
-       android:gravity="center"
-       app:layout_constraintEnd_toStartOf="@id/sale_rate"
-       app:layout_constraintStart_toEndOf="@+id/sale_rate_nb"
-       app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -69,7 +56,7 @@
         android:textColor="@color/colorWhite"
         android:gravity="center"
         app:layout_constraintEnd_toStartOf="@id/purchase_rate"
-        app:layout_constraintStart_toEndOf="@+id/purchase_rate_nb"
+        app:layout_constraintStart_toEndOf="@+id/rate_nb"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -87,7 +74,7 @@
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graph_container"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="180dp"
         android:orientation="horizontal"
         android:layout_margin="2dp"
         app:layout_constraintTop_toBottomOf="@id/purchase_rate"
