--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -74,9 +74,9 @@
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graph_container"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="200dp"
         android:orientation="horizontal"
-        android:layout_margin="2dp"
+        android:layout_marginTop="2dp"
         app:layout_constraintTop_toBottomOf="@id/purchase_rate"
         android:visibility="gone"
         >
