--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,6 @@
     android:background="@color/colorAccent">
 
 
-    <TextView
-
-        android:id="@+id/text_selected_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:textColor="@color/colorWhite"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/get_all_courses_btn" />
 
     <Button
         android:id="@+id/get_all_courses_btn"
@@ -29,10 +18,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
         app:layout_constraintStart_toStartOf="parent"
+        android:paddingStart="30dp"
+        android:paddingEnd="30dp"
+        android:visibility="gone"
         android:textColor="@color/colorWhite"
         android:background="@drawable/button_style"
         android:elevation="@dimen/cardview_compat_inset_shadow"
-        android:text="@string/get_courses_on">
+        >
 
     </Button>
 
@@ -42,7 +34,7 @@
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/text_selected_date"
+        app:layout_constraintBottom_toTopOf="@id/get_all_courses_btn"
         app:layout_constraintTop_toTopOf="parent"
         android:selectedWeekBackgroundColor="#ff0000"
         android:weekNumberColor="#0000ff"
@@ -53,10 +45,7 @@
         android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
-    </FrameLayout>
-
-
+        ></FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
