--- a/app/src/main/res/layout/main_list_fragment.xml
+++ b/app/src/main/res/layout/main_list_fragment.xml
@@ -111,27 +111,31 @@
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/get_full_list_btn"
         app:layout_constraintTop_toBottomOf="@id/info_panel"
         app:layout_constraintVertical_bias="1.0"
         tools:layout_editor_absoluteX="51dp" />
 
+
     <Button
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:paddingEnd="5dp"
-        android:paddingStart="5dp"
-        android:layout_marginBottom="20dp"
-        android:visibility="gone"
         android:id="@+id/get_full_list_btn"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@drawable/button_style"
+        android:paddingStart="40dp"
+        android:paddingEnd="40dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:text="@string/much_cur"
         android:textColor="@color/colorWhite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_style"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_marginBottom="2dp"
+        app:layout_constraintStart_toStartOf="parent"
+         />
 
-    </Button>
+
 
     <ProgressBar
         android:id="@+id/progress_bar"
