add error handler for getdata

--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -17,9 +17,11 @@
     app:cardCornerRadius="4dp"
     >
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/item_group"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorAccent">
+    android:background="@color/colorAccent"
+    >
 
 
     <TextView
