change text size

--- a/app/src/main/res/layout/main_list_fragment.xml
+++ b/app/src/main/res/layout/main_list_fragment.xml
@@ -40,6 +40,7 @@
                 android:gravity="center"
                 android:padding="3dp"
                 android:text="@string/cur_info"
+                android:textSize="10sp"
                 android:textColor="@color/colorWhite"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/rate_nb"
